# tree-sitter-zenscript

./: .gitignore  Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
